[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "cmake>=3.15",
    "scikit-build>=0.15.0",
    "ninja; platform_system!='Windows'"
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
archs = ['auto64']
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
