[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "cmake>=3.15",
    "scikit-build>=0.15.0"
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
archs = ['auto64']
test-command = "pytest {project}/pyslang/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
