[metadata]
name = pyslang
# version = <see setup.py>
description = Python bindings for slang, a library for compiling SystemVerilog
long_description = file: README.md
long_description_content_type = text/markdown
url = https://sv-lang.com/
author = Mike Popoloski
project_urls =
    Bug Tracker = https://github.com/MikePopoloski/slang/issues
    Documentation = https://sv-lang.com/
    Source Code = https://github.com/MikePopoloski/slang
keywords = slang, verilog, systemverilog, parsing, compiler, eda
license = MIT
license_file = ../LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
